--- a/help/installation.html
+++ b/help/installation.html
@@ -127,7 +127,7 @@ translate("The following file in the Bibledit installation provides all informat
 config/config.txt.
 </p>
 <p>
-translate ("For more security, access Bibledit Cloud through a Tor Browser Bundle.")
+translate ("For more security, access Bibledit Cloud through a Tor browser.")
 </p>
 
 
