--- a/help/installation.html
+++ b/help/installation.html
@@ -127,8 +127,7 @@ translate("The following file in the Bibledit installation provides all informat
 config/config.txt.
 </p>
 <p>
-translate ("For more security, access Bibledit Cloud through a Tor browser.")
+translate ("For better security, access Bibledit Cloud through a Tor browser.")
 </p>
-
 
 <script type="text/javascript" src="../assets/external.js"></script>
