--- a/help/changelog.html
+++ b/help/changelog.html
@@ -34,6 +34,7 @@
 <p>Clients can create OpenDocument files.</p>
 <p>Offline transfer of consultation notes from one client to another.</p>
 <p>Cmd-G: Search next in macOS app.</p>
+<p>The USFM verse editor was removed.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
