Bible editor labels updated
The update of the Bible editor is because of this: The USFM verse
editor is no longer there. There’s only a USFM chapter editor left now.
This fixes https://github.com/bibledit/bibledit/issues/544.

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -122,8 +122,8 @@ translate("Show a link in the Bible editor to select another Bible editor"):
 translate("Available Bible editors in the Bible editor selector:")
 [<a href="../editor/select">...</a>]
 </p>
-<p>translate("Visual editors:") <a href="?fastswitchvisualeditors=">##fastswitchvisualeditors##</a>.</p>
-<p>translate("USFM editors:") <a href="?fastswitchusfmeditors=">##fastswitchusfmeditors##</a>.</p>
+<p>translate("Text editors:") <a href="?fastswitchvisualeditors=">##fastswitchvisualeditors##</a>.</p>
+<p>translate("USFM editor:") <a href="?fastswitchusfmeditors=">##fastswitchusfmeditors##</a>.</p>
 
 <br>
 <p>
