Setting for main menu in tabbed view in basic mode
https://github.com/bibledit/bibledit/issues/541

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -197,4 +197,12 @@ translate ("This applies to the page with the change notifications.")
 translate ("Normally the controls are at the bottom of the page.")
 </p>
 
+<!-- #BEGINZONE tabs_possible -->
+<br>
+<p>
+translate("Display main menu in tabbed view"):
+<a href="?mainmenutabs=">##mainmenutabs##</a>.
+</p>
+<!-- #ENDZONE tabs_possible -->
+
 <script type="text/javascript" src="index.js?##VERSION##"></script>
