Tabbed view in Android app
This fixes https://github.com/bibledit/bibledit/issues/541.

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -35,6 +35,7 @@
 <p>Offline transfer of consultation notes from one client to another.</p>
 <p>Cmd-G: Search next in macOS app.</p>
 <p>The USFM verse editor was removed.</p>
+<p>Tabbed view in Android app.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
