--- a/personalize/index.html
+++ b/personalize/index.html
@@ -189,6 +189,7 @@ translate ("Whether to have a menu entry to go to the changes.")
 
 <!-- #ENDZONE basicmode -->
 
+<!-- #BEGINZONE advancedmode -->
 <br>
 <p>
 translate ("Controls for dismissing change notifications at the top"):
@@ -196,6 +197,7 @@ translate ("Controls for dismissing change notifications at the top"):
 translate ("This applies to the page with the change notifications.")
 translate ("Normally the controls are at the bottom of the page.")
 </p>
+<!-- #ENDZONE advancedmode -->
 
 <!-- #BEGINZONE tabs_possible -->
 <br>
