--- a/personalize/index.html
+++ b/personalize/index.html
@@ -104,6 +104,7 @@ translate("The permitted difference can be set below as a percentage.")
 <p>
 translate("Keep main menu always visible"):
 <a href="?menuvisible=">##menuvisible##</a>.
+translate("This works in both basic and advanced mode.")
 </p>
 
 <!-- #BEGINZONE touch -->
