--- a/help/changelog.html
+++ b/help/changelog.html
@@ -36,6 +36,7 @@
 <p>Cmd-G: Search next in macOS app.</p>
 <p>The USFM verse editor was removed.</p>
 <p>Tabbed view in Android and iOS app.</p>
+<p>Fixed: Menu Settings / Accounts was visible in disconnected client.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
