Working on extra control to edit note contents
https://github.com/bibledit/bibledit/issues/558

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -208,4 +208,14 @@ translate("Display main menu in tabbed view"):
 </p>
 <!-- #ENDZONE tabs_possible -->
 
+<!-- #BEGINZONE advancedmode -->
+<br>
+<p>
+translate ("Quickly edit consultation note contents"):
+<a href="?quickeditnotecontents">##quickeditnotecontents##</a>.
+translate ("This adds a control for editing the note contents right below the note contents.")
+translate ("This is an extra control in addition to the normal one.")
+</p>
+<!-- #ENDZONE advancedmode -->
+
 <script type="text/javascript" src="index.js?##VERSION##"></script>
