Can enable a contol for quickly editing the content of a consultation note
This fixes https://github.com/bibledit/bibledit/issues/558.

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -37,6 +37,7 @@
 <p>The USFM verse editor was removed.</p>
 <p>Tabbed view in Android and iOS app.</p>
 <p>Fixed: Menu Settings / Accounts was visible in disconnected client.</p>
+<p>Can enable a contol for quickly editing the content of a consultation note.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
