Fixed: The iOS app has a blank screen right after app install
This fixes https://github.com/bibledit/bibledit/issues/555

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -38,6 +38,7 @@
 <p>Tabbed view in Android and iOS app.</p>
 <p>Fixed: Menu Settings / Accounts was visible in disconnected client.</p>
 <p>Can enable a control for quickly editing the content of a consultation note.</p>
+<p>Fixed: The iOS app has a blank screen right after app install.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
