--- a/help/changelog.html
+++ b/help/changelog.html
@@ -39,6 +39,7 @@
 <p>Fixed: Menu Settings / Accounts was visible in disconnected client.</p>
 <p>Can enable a control for quickly editing the content of a consultation note.</p>
 <p>Fixed: The iOS app has a blank screen right after app install.</p>
+<p>Export the entire Bible to a single OpenDocument file.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
