--- a/help/changelog.html
+++ b/help/changelog.html
@@ -40,6 +40,7 @@
 <p>Can enable a control for quickly editing the content of a consultation note.</p>
 <p>Fixed: The iOS app has a blank screen right after app install.</p>
 <p>Export the entire Bible to a single OpenDocument file.</p>
+<p>Localized stylesheets.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
