Check for no-break space at French punctuation
This fixes https://github.com/bibledit/bibledit/issues/562

--- a/checks/settings.html
+++ b/checks/settings.html
@@ -74,6 +74,12 @@ translate("matching pairs")
 translate("space at the end of a verse")
 </p>
 
+<p>
+<input type="checkbox" name="frenchpunctuation" onchange="checkbox(this)" ##frenchpunctuation## />
+translate("no-break space at French punctuation")
+</p>
+
+
 <br>
 <p><a href="settingssentences">translate("Settings for the sentence structure")</a></p>
 
