--- a/help/changelog.html
+++ b/help/changelog.html
@@ -41,6 +41,7 @@
 <p>Fixed: The iOS app has a blank screen right after app install.</p>
 <p>Export the entire Bible to a single OpenDocument file.</p>
 <p>Localized stylesheets.</p>
+<p>Check for no-break space at French punctuation.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
