Cloud shell wrapper no longer can start multiple Cloud instances
This fixes https://github.com/bibledit/bibledit/issues/569

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -42,6 +42,7 @@
 <p>Export the entire Bible to a single OpenDocument file.</p>
 <p>Localized stylesheets.</p>
 <p>Check for no-break space at French punctuation.</p>
+<p>Cloud shell wrapper no longer can start multiple Cloud instances.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
