--- a/personalize/index.html
+++ b/personalize/index.html
@@ -69,8 +69,8 @@ translate("Show breadcrumbs"):
 <br>
 <p>
 translate("Workspace menu fade-out delay"):
-<a href="?desktopfadeoutdelay=">##desktopfadeoutdelay## seconds</a>.
-translate("How long it takes for the desktop menu to start fading out.")
+<a href="?workspacefadeoutdelay=">##workspacefadeoutdelay## seconds</a>.
+translate("How long it takes for the workspace menu to start fading out.")
 </p>
 
 <!-- #BEGINZONE bibles -->
