Fixed: Phillips NT won't display everywhere
This fixes https://github.com/bibledit/cloud/issues/2

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,6 +1,7 @@
 <h1>ChangeLog</h1>
 
 <p>5.0.186: Check that JavaScript is enabled in the browser.</p>
+<p>5.0.199: Fixed: Phillips NT won't display everywhere.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
