Updated help about installing Cloud from debian/ubuntu packages
https://github.com/bibledit/cloud/issues/13

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -2,6 +2,7 @@
 
 <p>5.0.186: Check that JavaScript is enabled in the browser.</p>
 <p>5.0.199: Fixed: Phillips NT won't display everywhere.</p>
+<p>5.0.200: Debian and Ubuntu packages for Bibledit Cloud.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
