Updated help Cloud Ubuntu
https://github.com/bibledit/cloud/issues/13

--- a/help/installcloudubuntu.html
+++ b/help/installcloudubuntu.html
@@ -1,9 +1,6 @@
 <h2>translate("Install Bibledit Cloud on Ubuntu")</h2>
 
-<p>
-translate("Follow the steps below to install Bibledit.")
-<a href="installcloudsourcedebian">(Or use an alternate method.)</a>
-</p>
+<p>translate("Follow the steps below to install Bibledit.")</p>
 <ol>
   <li>translate("Open a terminal.")</li>
   <li>
@@ -27,4 +24,8 @@ translate("Examples:")
 <p><a href="http://192.168.2.1:8080">http://192.168.2.1:8080</a></p>
 <p><a href="http://localhost:8080">http://localhost:8080</a></p>
 <p>translate("Open the web address in a browser, follow the instructions on the screen to configure Bibledit Cloud, and log in.")</p>
-
+<br>
+<p>
+translate ("The Ubuntu packages support Ubuntu 15.05 and higher.")
+<a href="installcloudsourcedebian">Bibledit Cloud can also be installed from source.</a>
+</p>
