--- a/help/changelog.html
+++ b/help/changelog.html
@@ -4,6 +4,7 @@
 <p>5.0.199: Fixed: Phillips NT won't display everywhere.</p>
 <p>5.0.200: Debian and Ubuntu packages for Bibledit Cloud.</p>
 <p>5.0.201: Fixed: USFM chapter editor page unload fails to save unsaved text.</p>
+<p>5.0.201: Mailed sprint planning includes the month.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
