Updated development info

--- a/help/installation.html
+++ b/help/installation.html
@@ -90,8 +90,7 @@ translate("The changes made in this way can be synchronized with Bibledit Cloud 
 
 <h2>translate("Development version")</h2>
 <p>
-  <a href="https://github.com/teusbenschop/bibledit" ##external##>translate("The Bibledit source code is kept in a git repository.")</a>
-  translate("Experienced software developers will be able to create all Bibledit editions from the source code.")
+  <a href="https://github.com/bibledit" ##external##>translate("The Bibledit source code is kept in git repositories.")</a>
 </p>
 
 <h2>translate("Hosting providers")</h2>
