--- a/help/changelog.html
+++ b/help/changelog.html
@@ -6,6 +6,7 @@
 <p>5.0.201: Fixed: USFM chapter editor page unload fails to save unsaved text.</p>
 <p>5.0.201: Mailed sprint planning includes the month.</p>
 <p>5.0.201: Can mail the sprint planning of a different month than the current one.</p>
+<p>5.0.206: Setting whether to send only, or send to and receive from git repository.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
