--- a/help/changelog.html
+++ b/help/changelog.html
@@ -7,6 +7,7 @@
 <p>5.0.201: Mailed sprint planning includes the month.</p>
 <p>5.0.201: Can mail the sprint planning of a different month than the current one.</p>
 <p>5.0.206: Setting whether to send only, or send to and receive from git repository.</p>
+<p>5.0.220: Fixed: Android: Cannot return to the settings page when user navigated away.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
