Fixed: The screen with change notifications stays blank for longer than expected on low power devices.
This fixes https://github.com/bibledit/cloud/issues/10

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -8,6 +8,7 @@
 <p>5.0.201: Can mail the sprint planning of a different month than the current one.</p>
 <p>5.0.206: Setting whether to send only, or send to and receive from git repository.</p>
 <p>5.0.220: Fixed: Android: Cannot return to the settings page when user navigated away.</p>
+<p>5.0.225: Fixed: The screen with change notifications stays blank for longer than expected on low power devices.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
