Fixed: The setting for tabbed mode was visible in advanced mode.
This fixes https://github.com/bibledit/cloud/issues/11

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -200,6 +200,7 @@ translate ("Normally the controls are at the bottom of the page.")
 </p>
 <!-- #ENDZONE advancedmode -->
 
+<!-- #BEGINZONE basicmode -->
 <!-- #BEGINZONE tabs_possible -->
 <br>
 <p>
@@ -207,6 +208,7 @@ translate("Display main menu in tabbed view"):
 <a href="?mainmenutabs=">##mainmenutabs##</a>.
 </p>
 <!-- #ENDZONE tabs_possible -->
+<!-- #ENDZONE basicmode -->
 
 <!-- #BEGINZONE advancedmode -->
 <br>
