Bible editors save changes after one second rather than after five
This fixes https://github.com/bibledit/cloud/issues/31. A small bit of
refactoring was done also.

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -10,6 +10,7 @@
 <p>5.0.220: Fixed: Android: Cannot return to the settings page when user navigated away.</p>
 <p>5.0.225: Fixed: The screen with change notifications stays blank for longer than expected on low power devices.</p>
 <p>5.0.225: Fixed: The setting for tabbed mode was visible in advanced mode.</p>
+<p>5.0.226: Bible editors save changes after one second rather than after five.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
