--- a/help/changelog.html
+++ b/help/changelog.html
@@ -11,6 +11,7 @@
 <p>5.0.225: Fixed: The screen with change notifications stays blank for longer than expected on low power devices.</p>
 <p>5.0.225: Fixed: The setting for tabbed mode was visible in advanced mode.</p>
 <p>5.0.226: Bible editors save changes after one second rather than after five.</p>
+<p>5.0.228: The Cloud gives a warning when the emailer has not yet been set up.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
