Displays an unlimited amount of change notifications at once
This fixes https://github.com/bibledit/cloud/issues/33 - When there
more than 1000 change notifications, it loads only thousand of them.
Yet, clearing them, at the bottom, clears all of them. It were better
to load all of them on the page. So that the "clear" link accurately
describes how many of them it will clear.

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -12,6 +12,7 @@
 <p>5.0.225: Fixed: The setting for tabbed mode was visible in advanced mode.</p>
 <p>5.0.226: Bible editors save changes after one second rather than after five.</p>
 <p>5.0.228: The Cloud gives a warning when the emailer has not yet been set up.</p>
+<p>5.0.232: Displays an unlimited amount of change notifications at once.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
