Fixed: Confusing Preferences > Maximum difference categories
This fixes https://github.com/bibledit/cloud/issues/35. Currently in
the Android and Linux versions, the categories for the Maximum
differences are
USFM editor, Chapter editor
USFM editor, Verse editor.

I believe that there is only one USFM editor now. (The old USFM verse
editor is gone, isn't it?) So it seems that the second line should have
the 'USFM editor,' deleted. The sentence (starting one line above)
would make better sense as
The maximum differense for
the USFM editor and the Visual Chapter editors

To match, the second line would become:
the Visual Verse editor

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -83,20 +83,16 @@ translate("The permitted difference can be set below as a percentage.")
 </p>
 <p>translate("Maximum difference for:")</p>
 <table>
-  <!-- #BEGINZONE chaptereditors -->
   <tr>
-    <td><label for="chapterpercentage">##chaptereditors##:</label></td>
+    <td><label for="chapterpercentage">translate("Chapter editors:")</label></td>
     <td><input type="range" name="chapterpercentage" id="chapterpercentage" value="##chapterpercentage##" min="10" max="100"></td>
     <td><label id="chapterpercentageval" for="chapterpercentage">##chapterpercentage##</label>%</td>
   </tr>
-  <!-- #ENDZONE chaptereditors -->
-  <!-- #BEGINZONE verseeditors -->
   <tr>
-    <td><label for="versepercentage">##verseeditors##:</label></td>
+    <td><label for="versepercentage">translate("Verse editor:")</label></td>
     <td><input type="range" name="versepercentage" id="versepercentage" value="##versepercentage##" min="10" max="100"></td>
     <td><label id="versepercentageval" for="versepercentage">##versepercentage##</label>%</td>
   </tr>
-  <!-- #ENDZONE verseeditors -->
 </table>
 <!-- #ENDZONE bibles -->
 
