--- a/help/changelog.html
+++ b/help/changelog.html
@@ -14,6 +14,7 @@
 <p>5.0.228: The Cloud gives a warning when the emailer has not yet been set up.</p>
 <p>5.0.232: Displays an unlimited amount of change notifications at once.</p>
 <p>5.0.232: Fixed: Confusing Preferences > Maximum difference categories.</p>
+<p>5.0.232: More practical order of the tabs in tabbed mode.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
