The setup is now "updating" instead of "installing"
This fixes https://github.com/bibledit/cloud/issues/37

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -16,6 +16,7 @@
 <p>5.0.232: Fixed: Confusing Preferences > Maximum difference categories.</p>
 <p>5.0.232: More practical order of the tabs in tabbed mode.</p>
 <p>5.0.232: Tabbed mode is the default setting on relevant devices.</p>
+<p>5.0.233: The setup is now "updating" instead of "installing".</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
