--- a/help/changelog.html
+++ b/help/changelog.html
@@ -18,6 +18,7 @@
 <p>5.0.232: Tabbed mode is the default setting on relevant devices.</p>
 <p>5.0.233: The setup is now "updating" instead of "installing".</p>
 <p>5.0.233: Feedback and progress during linking to a git repository.</p>
+<p>5.0.233: Information about how to restore a Bible to an earlier stage via a git repository.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
