Better notes placement in tool for transferring notes
This fixes https://github.com/bibledit/cloud/issues/39: Inserting
crossreferences at wrong place

While using the tool to insert cross references, when the target Bible
contains \p at the end, the last cross references will be placed at the
\p. And it cannot be moved back to the proper place through the arrow
keys. See for example Exodus 5:5.

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -19,6 +19,7 @@
 <p>5.0.233: The setup is now "updating" instead of "installing".</p>
 <p>5.0.233: Feedback and progress during linking to a git repository.</p>
 <p>5.0.233: Information about how to restore a Bible to an earlier stage via a git repository.</p>
+<p>5.0.233: Better notes placement in tool for transferring notes.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
