--- a/help/installcloudubuntu.html
+++ b/help/installcloudubuntu.html
@@ -5,7 +5,7 @@
   <li>translate("Open a terminal.")</li>
   <li>
     <p>translate("Add the Bibledit repository:")</p>
-    <p><code>sudo add-apt-repository ppa:teusbenschop/bibledit</code></p>
+    <p><code>sudo add-apt-repository ppa:bibledit/ppa</code></p>
   </li>
   <li>
     <p>translate("Read the repository:")</p>
