--- a/help/changelog.html
+++ b/help/changelog.html
@@ -21,6 +21,7 @@
 <p>5.0.233: Information about how to restore a Bible to an earlier stage via a git repository.</p>
 <p>5.0.233: Better notes placement in tool for transferring notes.</p>
 <p>5.0.236: Splits large emails with change notifications up into parts.</p>
+<p>5.0.268: 'Please wait' feedback when first connecting to the Cloud.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
