Loads all change notifications despite shaky network connection
This fixes https://github.com/bibledit/cloud/issues/44: Failure to
fetch all change notifications

When the internet connection is sub-standard, the page with the change
notifications fails to fetch, or may fail to fetch, all of the
notifications. Upon a network error, it now stops. Rather, it should
retry on the network error, probably with a small delay. It should
retry to fetch the same as it tried, then continue with the next one.

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -22,6 +22,7 @@
 <p>5.0.233: Better notes placement in tool for transferring notes.</p>
 <p>5.0.236: Splits large emails with change notifications up into parts.</p>
 <p>5.0.268: 'Please wait' feedback when first connecting to the Cloud.</p>
+<p>5.0.271: Loads all change notifications despite shaky network connection.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
