--- a/help/changelog.html
+++ b/help/changelog.html
@@ -23,6 +23,7 @@
 <p>5.0.236: Splits large emails with change notifications up into parts.</p>
 <p>5.0.268: 'Please wait' feedback when first connecting to the Cloud.</p>
 <p>5.0.271: Loads all change notifications despite shaky network connection.</p>
+<p>5.0.272: Client no longer caches resources while the Cloud is being upgraded.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
