Exports one installed resource per tarball
https://github.com/bibledit/cloud/issues/49: Exporting resources is
broken! It fails on Linux and Android, says Phil. Teus says it works
well on macOS, lots and lots of resources. It fails to allocate
sufficient memory then gives an exception and quits. Also, uploading
such a huge file fails. It's nearly 1 Gig. Solution: One .tar per
resource.

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -24,6 +24,7 @@
 <p>5.0.268: 'Please wait' feedback when first connecting to the Cloud.</p>
 <p>5.0.271: Loads all change notifications despite shaky network connection.</p>
 <p>5.0.272: Client no longer caches resources while the Cloud is being upgraded.</p>
+<p>5.0.274: Client also exports one installed resource per tarball.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
