Clearer user interface
This fixes https://github.com/bibledit/cloud/issues/49: First, the
current menu entry was confusing to me: "Get the installed Resources".
Get them where? Why would I want to 'get' them?
I suggest that the menu entry under the System settings be changed to
Make an archive of all the Resources installed on this device

The last menu entry, for installing Resources could be clearer also:
Import a Bibledit Resources archive into this device.

When the archive has been created, change the screen that appears to
something like:
Download the archive just created

What would help a lot is that after creating the resources archive, the
page would give a summary as to how many resources it found and put
into that archive. And if there's no resource installed locally, it
would give feedback about that also, with the suggestion to install
some, then try again.

--- a/system/index.html
+++ b/system/index.html
@@ -51,12 +51,12 @@ translate("Get that file.")
 translate("Copy it to the new Bibledit client.")
 translate("Import it there.")
 </p>
-<p><a href="?producebibles=">translate("Get the local Bibles.")</a></p>
-<p><a href="?importbibles=">translate("Import and install Bibles.")</a></p>
-<p><a href="?producenotes=">translate("Get the local Consultation Notes.")</a></p>
-<p><a href="?importnotes=">translate("Import and install Consultation Notes.")</a></p>
-<p><a href="?produceresources=">translate("Get the installed Resources.")</a></p>
-<p><a href="?importresources=">translate("Import and install Resources.")</a></p>
+<p><a href="?producebibles=">translate("Make an archive of all the Bibles available on this device.")</a></p>
+<p><a href="?importbibles=">translate("Import a Bibles archive into this device.")</a></p>
+<p><a href="?producenotes=">translate("Make an archive of all the Consultation Notes available on this device.")</a></p>
+<p><a href="?importnotes=">translate("Import a Consultation Notes archive into this device.")</a></p>
+<p><a href="?produceresources=">translate("Make an archive of all the Resources installed on this device.")</a></p>
+<p><a href="?importresources=">translate("Import a Resources archive into this device.")</a></p>
 <!-- #ENDZONE client -->
 
 <script type="text/javascript" src="../assets/checkbox.js"></script>
