--- a/help/changelog.html
+++ b/help/changelog.html
@@ -26,6 +26,7 @@
 <p>5.0.272: Client no longer caches resources while the Cloud is being upgraded.</p>
 <p>5.0.274: Client also exports one installed resource per tarball.</p>
 <p>5.0.278: Fixed: On Windows the window can become too small to be visible.</p>
+<p>5.0.279: On Chrome OS it can handle more notes before it fails to start up.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
