Set per bibles whether it sends changes to RSS
This fixes https://github.com/bibledit/cloud/issues/47

--- a/bible/settings.html
+++ b/bible/settings.html
@@ -51,6 +51,10 @@
 <input type="checkbox" name="public" onchange="checkbox(this, 'settings?bible=##bible##')" ##public## />
 translate("The public can give feedback")
 </p>
+<p>
+<input type="checkbox" name="rss" onchange="checkbox(this, 'settings?bible=##bible##')" ##rss## />
+<a href="/##systemindex##">translate("Send the changes to the RSS feed")</a>
+</p>
 <p><a href="?bible=##bible##&resource=">translate("Import text from a resource")</a></p>
 <!-- #ENDZONE server -->
 <!-- #ENDZONE write_access -->
