Improved stability of downloading transfer tarballs
https://github.com/bibledit/cloud/issues/70

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -28,6 +28,8 @@
 <p>5.0.278: Fixed: On Windows the window can become too small to be visible.</p>
 <p>5.0.279: On Chrome OS it can handle more notes before it fails to start up.</p>
 <p>5.0.282: Setting per Bible whether it sends the changes to the RSS feed.</p>
+<p>5.0.286: On Linux it opens the Download folder after downloading a file, instead of opening that file.</p>
+<p>5.0.286: Improved stability of downloading transfer tarballs.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
