Remove deprecated visual editor
https://github.com/bibledit/cloud/issues/52

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -31,6 +31,7 @@
 <p>5.0.286: On Linux it opens the Download folder after downloading a file, instead of opening that file.</p>
 <p>5.0.286: Improved stability of downloading transfer tarballs.</p>
 <p>5.0.286: Improved installation documentation on Ubuntu.</p>
+<p>5.0.292: Remove deprecated visual editors.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
