Fixed: The tool to transfer cross references gets mixed up if there's footnotes in the verse
This fixes https://github.com/bibledit/cloud/issues/55: The tool to
transfer cross references, when a certain verse also has a footnote,
the cross reference at the left panel does not match with the cross
reference at the right panel, when the footnote is before the caret.

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -32,6 +32,7 @@
 <p>5.0.286: Improved stability of downloading transfer tarballs.</p>
 <p>5.0.286: Improved installation documentation on Ubuntu.</p>
 <p>5.0.292: Remove deprecated visual editors.</p>
+<p>5.0.293: Fixed: The tool to transfer cross references gets mixed up if there's footnotes in the verse.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
