Checks on the presence of the \toc[1-3] markers
This fixes https://github.com/bibledit/cloud/issues/62

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -33,6 +33,7 @@
 <p>5.0.286: Improved installation documentation on Ubuntu.</p>
 <p>5.0.292: Remove deprecated visual editors.</p>
 <p>5.0.293: The tool to transfer cross references was removed as too complex.</p>
+<p>5.0.308: Checks on the presence of the \toc[1-3] markers.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
