--- a/help/changelog.html
+++ b/help/changelog.html
@@ -35,6 +35,7 @@
 <p>5.0.293: The tool to transfer cross references was removed as too complex.</p>
 <p>5.0.308: Checks on the presence of the \toc[1-3] markers.</p>
 <p>5.0.330: Larger tabs on Android in basic mode.</p>
+<p>5.0.338: Gradually convert consultation notes to the new storage format.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
