--- a/help/changelog.html
+++ b/help/changelog.html
@@ -36,6 +36,7 @@
 <p>5.0.308: Checks on the presence of the \toc[1-3] markers.</p>
 <p>5.0.330: Larger tabs on Android in basic mode.</p>
 <p>5.0.338: Gradually convert consultation notes to the new storage format.</p>
+<p>5.0.339: Fixed: A consultant cannot see the translation in basic mode.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
