--- a/help/changelog.html
+++ b/help/changelog.html
@@ -37,6 +37,7 @@
 <p>5.0.330: Larger tabs on Android in basic mode.</p>
 <p>5.0.338: Gradually convert consultation notes to the new storage format.</p>
 <p>5.0.339: Fixed: A consultant cannot see the translation in basic mode.</p>
+<p>5.0.342: Fixed: Resources not showing properly.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
