--- a/help/changelog.html
+++ b/help/changelog.html
@@ -38,6 +38,7 @@
 <p>5.0.338: Gradually convert consultation notes to the new storage format.</p>
 <p>5.0.339: Fixed: A consultant cannot see the translation in basic mode.</p>
 <p>5.0.342: Fixed: Resources not showing properly.</p>
+<p>5.0.345: Fixed: RSS dates are one month ahead.</p>
 <p></p>
 
 <h2>Version 5.0.185</h2>
