--- a/manage/exports.html
+++ b/manage/exports.html
@@ -82,6 +82,11 @@ translate("Display the current date in the running headers.")
   <input type="checkbox" name="odtsecure" onchange="checkbox(this)" ##odtsecure## />
   translate("Secure the export with the password.")
 </p>
+<br>
+<p>
+translate("The type of space to insert after a verse number:")
+<a href="?odtwhitespace=space">translate("space")</a> Todo
+</p>
 
 <h3>translate("Info document")</h3>
 <p>
