Set the type of space to use for OpenDocument verses
https://github.com/bibledit/cloud/issues/77

--- a/manage/exports.html
+++ b/manage/exports.html
@@ -84,8 +84,11 @@ translate("Display the current date in the running headers.")
 </p>
 <br>
 <p>
-translate("The type of space to insert after a verse number:")
-<a href="?odtwhitespace=space">translate("space")</a> Todo
+translate("The type of space to insert after a verse number")
+<!-- #BEGINITERATION spaces -->
+|
+<a href="?odtwhitespace=##space##" class="##class##">##name##</a>
+<!-- #ENDITERATION spaces -->
 </p>
 
 <h3>translate("Info document")</h3>
