--- a/help/changelog.html
+++ b/help/changelog.html
@@ -40,7 +40,9 @@
 <p>5.0.342: Fixed: Resources not showing properly.</p>
 <p>5.0.345: Fixed: RSS dates are one month ahead.</p>
 <p>5.0.349: Fixed: Windows port does not create the sample Bible.</p>
+<p>5.0.353: Select the type of space to add after a verse number in the Bible exports.</p>
 <p></p>
+
 
 <h2>Version 5.0.185</h2>
 <p>Version bump to 5.1 to make it higher than version 4.9 now in Debian and derivatives.</p>
