--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,6 +1,7 @@
 <h1>ChangeLog</h1>
 
 <p></p>
+<p>5.0.363: The default style for marker \va is in superscript.</p>
 <p>5.0.360: A USFM chapter label \cl in the text switches off drop caps output.</p>
 <p>5.0.357: No longer notifies users about updated versions.</p>
 <p>5.0.353: Select the type of space to add after a verse number in the Bible exports.</p>
