--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,6 +1,7 @@
 <h1>ChangeLog</h1>
 
 <p></p>
+<p>5.0.366: Check on multiple « in French citation style.</p>
 <p>5.0.364: Does not import XML files into a Bible.</p>
 <p>5.0.363: Imports books with id INT.</p>
 <p>5.0.363: The default style for markers va and vp is in superscript.</p>
