--- a/help/licenses.html
+++ b/help/licenses.html
@@ -1,25 +1,25 @@
 <h2>translate("Licenses")</h2>
 
-<h3>Bibledit software</h3>
-<p>Copyright (©) 2003-2017 Teus Benschop.</p>
-<p>This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</p>
-<p>This program is distributed in the hope that it will be useful, but without any warranty; without even the implied warranty of merchantability or fitness for a particular purpose. See the GNU General Public License for more details.</p>
-<p>You should have received a copy of the GNU General Public License along with this program. See also <a href="http://www.gnu.org/licenses/gpl.html" ##external##>http://www.gnu.org/licenses/gpl.html</a>.</p>
+<h3>translate("Bibledit software")</h3>
+<p>translate("Copyright (©) 2003-2017 Teus Benschop.")</p>
+<p>translate("This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.")</p>
+<p>translate("This program is distributed in the hope that it will be useful, but without any warranty; without even the implied warranty of merchantability or fitness for a particular purpose. See the GNU General Public License for more details.")</p>
+<p>translate("You should have received a copy of the GNU General Public License along with this program. See also") <a href="http://www.gnu.org/licenses/gpl.html" ##external##>http://www.gnu.org/licenses/gpl.html</a>.</p>
 
-<h3>ETCBC4 Hebrew text database</h3>
-<p>
+<h3>translate("ETCBC4 Hebrew text database")</h3>
+<p>translate("
 The ETCBC database of the Hebrew Bible contains the scholarly text of the Hebrew Bible with linguistic markup.
-The source of the data is the
+The source of the data is the")
 <a href="http://dx.doi.org/10.17026%2Fdans-z6y-skyh" ##external##>HEBREW TEXT DATABASE ETCBC4</a>.
-Bibledit obtained the data from
-<a href="https://shebanq.ancient-data.org/sources" ##external##>SHEBANQ, a search engine for the Hebrew Bible</a>.
-This work is licensed under a <a href="http://creativecommons.org/licenses/by-nc/4.0" ##external##>Creative Commons Attribution-NonCommercial 4.0 International License</a>. You may not use the data for commercial applications without consent.
+translate("Bibledit obtained the data from")
+<a href="https://shebanq.ancient-data.org/sources" ##external##>translate("SHEBANQ, a search engine for the Hebrew Bible")</a>.translate("
+This work is licensed under a") <a href="http://creativecommons.org/licenses/by-nc/4.0" ##external##>translate("Creative Commons Attribution-NonCommercial 4.0 International License")</a>. translate("You may not use the data for commercial applications without consent.")
 </p>
 
-<h3>Other code and data</h3>
-<p>
-All the code and data included in Bibledit that does not fall in the above license categories has been licensed as mentioned in various bits of source code included in Bibledit.
-<a href="https://github.com/bibledit" ##external##>See the source code repository</a>.
+<h3>translate("Other code and data")</h3>
+<p>translate("
+All the code and data included in Bibledit that does not fall in the above license categories has been licensed as mentioned in various bits of source code included in Bibledit.")
+<a href="https://github.com/bibledit" ##external##>translate("See the source code repository")</a>.
 </p>
 
 <script type="text/javascript" src="../assets/external.js"></script>
