--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,6 +1,7 @@
 <h1>ChangeLog</h1>
 
 <p></p>
+<p>5.0.371: Improved formatting of USFM closing markers.</p>
 <p>5.0.370: Clears tens of thousands of change notifications easily.</p>
 <p>5.0.366: Check on multiple « in French citation style.</p>
 <p>5.0.364: Does not import XML files into a Bible.</p>
